Add Mistral API key to environment template

--- a/.env.template
+++ b/.env.template
@@ -14,6 +14,9 @@ GOOGLE_API_KEY=your_google_key_here
 # xAI (Grok)
 XAI_API_KEY=your_xai_key_here
 
+# Mistral
+MISTRAL_API_KEY=your_mistral_key_here
+
 # Chinese LLMs
 QWEN_API_KEY=your_qwen_key_here
 DEEPSEEK_API_KEY=your_deepseek_key_here
